--- a/lab2/report/00-title.tex
+++ b/lab2/report/00-title.tex
@@ -19,10 +19,10 @@
 	
 	
 	\begin{center}
-		\Large\textbf{Отчет по лабораторной работе №1 по курсу "Анализ алгоритмов"}\newline
+		\Large\textbf{Отчет по лабораторной работе №2 по курсу "Анализ алгоритмов"}\newline
 	\end{center}
 	
-	\noindent\textbf{Тема} $\underline{\text{Расстояние Левенштейна и Дамерау-Левенштейна}}$\newline\newline\newline
+	\noindent\textbf{Тема} $\underline{\text{Алгоритмы умножения матриц}}$\newline\newline\newline
 	\noindent\textbf{Студент} $\underline{\text{Зайцева А.А.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
 	\noindent\textbf{Группа} $\underline{\text{ИУ7-52Б~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
 	\noindent\textbf{Преподаватели} \underline{Волкова Л.Л.}\newline
