--- a/lab2/report/02-intro.tex
+++ b/lab2/report/02-intro.tex
@@ -1,28 +1,19 @@
 \chapter*{Введение}
 \addcontentsline{toc}{chapter}{Введение}
 
-Целью данной лабораторной работы является применение навыков динамического программирования в алгоритмах поиска расстояний Левенштейна и Дамерау-Левенштейна.
+Целью данной лабораторной работы является изучение способов оптимизации алгоритмов на примере алгоритмов умножения матриц.
 
-Определение расстояния Леввенштейна (редакционного расстояния) основано на понятии «редакционное предписание».
+Основное значение термин «матрица» имеет в математике. Матрица — математический объект, записываемый в виде прямоугольной таблицы элементов кольца или поля (например, целых или комплексных чисел), которая представляет собой совокупность строк и столбцов, на пересечении которых находятся её элементы. Количество строк и столбцов матрицы задают размер матрицы \cite{matrix}.
 
-Редакционное предписание – последовательность действий, необходимых для получения второй строки из первой  кратчайшим способом. 
+Матрицы широко применяются в математике для компактной записи систем линейных алгебраических или дифференциальных уравнений. В этом случае, количество строк матрицы соответствует числу уравнений, а количество столбцов — количеству неизвестных. В результате решение систем линейных уравнений сводится к операциям над матрицами, в том числе - умножению.
 
-Расстояние Левенштейна – минимальное количество действий (вставка, удаление, замена символа), необходимых для преобразования одной строки в другую. 
+Умножение матриц A и B — это операция вычисления матрицы C, элементы которой равны сумме произведений элементов в соответствующей строке первого множителя и столбце второго \cite{matrix2}.
 
-Если текст был набран с клавиатуры, то вместо расстояния Левенштейна чаще используют расстояние Дамерау – Левенштейна, в котором добавляется еще одно возможное действие - перестановка двух соседних символов.~\cite{Passenger}
-
-Расстояния Левенштейна и Дамерау – Левенштейна применяются в таких сферах, как: 
-\begin{itemize}
-	\item компьютерная лингвистика (автозамена в посиковых запросах, текстовая редактура);
-	\item биоинформатика (сравнение генов, хромосом и белков);
-	\item нечеткий поиск записей в базах (борьба с мошенниками и опечатками).
-\end{itemize}
 
 В рамках выполнения работы необходимо решить следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
-	\item изучить расстояния Левенштейна и Дамерау-Левенштейна;
-	\item разработать алгоритмы поиска этих расстояний;
-	\item реализовать разработанные алгоритмы;
-	\item провести сравнительный анализ процессорного времени выполнения реализаций этих алгоритмов;
-	\item провести сравнительный анализ затрачиваемой реализованными алгоритмами пиковой памяти.
+	\item изучить алгоритмы умножения матриц;
+	\item разработать и реализовать 3 алгоритма умножения матриц: стандартный, Винограда и Винограда с оптимизациями;
+	\item оценить трудоемкость реализаций алгоритмов;
+	\item провести сравнительный анализ процессорного времени выполнения реализаций алгоритмов.
 \end{enumerate}
