--- a/lab2/report/10-analysis.tex
+++ b/lab2/report/10-analysis.tex
@@ -1,96 +1,55 @@
 \chapter{Аналитическая часть}
 
-Расстояния Левенштейна и Дамерау–Левенштейна – это минимальное количество действий, необходимых для преобразования одной строки в другую. Различие между этими расстояниями - в наборе допустимых операций. 
+\section{Стандартный алгоритм умножения матриц}
 
-В расстоянии Левенштейна расссматриваются такие действия над символами, как вставка (I-insert), удаление (D-delete) и замена (R-replace). Также вводится операция, которая не требует никаких действий - совпадение (M-match).
+Пусть даны две прямоугольные матрицы $A[M \times N]$ и $B[N \times Q]$:
+$$
+A = 
+\begin{bmatrix} 
+	a_{11} & a_{12} & \cdots & a_{1n} \\
+	a_{21} & a_{22} & \cdots & a_{2n} \\ 
+	\vdots & \vdots & \ddots & \vdots \\ 
+	a_{m1} & a_{m2} & \cdots & a_{mn}
+\end{bmatrix}
+B =   
+\begin{bmatrix} 
+	b_{11} & b_{12} & \cdots & b_{1q} \\
+	b_{21} & b_{22} & \cdots & b_{2q} \\ 
+	\vdots & \vdots & \ddots & \vdots \\ 
+	b_{n1} & b_{n2} & \cdots & b_{nq}
+\end{bmatrix}
+$$
+Тогда матрица $C[M \times Q]$ -- произведение матриц:
+$$
+C = 
+\begin{bmatrix} 
+	c_{11} & c_{12} & \cdots & c_{1q} \\
+	c_{21} & c_{22} & \cdots & c_{2q} \\ 
+	\vdots & \vdots & \ddots & \vdots \\ 
+	c_{m1} & c_{m2} & \cdots & c_{mq}
+\end{bmatrix},
+$$
+в которой каждый элемент вычисляется по формуле 1: 
+$$c_{ij} = \sum_{k=1}^n a_{ik}b_{kj}, ~(i=1, 2, \ldots l;j=1, 2, \ldots n)~~(1)$$
 
-В расстоянии Дамерау–Левенштейна в дополнение к перечисленным операциям вводится также перестановка соседних символов (X-xchange).
+Стандартный алгоритм действует именно по этой формуле.
 
-Данным операциям можно назначить цену (штраф). Часто ипользуется следующий набор штрафов: для операции M он равен нулю, а для остальных (I, D, R, X) - единице. 
 
-Тогда задача нахождения расстояний Левенштейна и Дамерау–Левенштейна сводится к поиску последовательности действий, минимизирующих суммарный штраф \cite{Levenshtein}. Это можно сделать с помощью рекуррентных формул, которые будут рассмотрены в этом разделе.
+\section{Алгоритм Винограда умножения матриц}
 
-\section{Расстояние Левенштейна}
- 
-Пусть дано две строки $S_{1}$ и $S_{2}$. Тогда расстояние Левенштейна можно найти по рекуррентной формуле (\ref{eq:ref1}):
+Если посмотреть на результат умножения двух матриц, то видно, что каждый элемент в нем представляет собой скалярное произведение соответствующих строки и столбца исходных матриц.
+Можно заметить также, что такое умножение допускает предварительную обработку, позволяющую часть работы выполнить заранее.
 
+Рассмотрим два вектора $V = (v_1, v_2, v_3, v_4)$ и $W = (w_1, w_2, w_3, w_4)$.
+Их скалярное произведение равно: $V \cdot W = v_1w_1 + v_2w_2 + v_3w_3 + v_4w_4$, что эквивалентно (\ref{for:new}):
 \begin{equation}
-	D(S_1[1...i],S_2[1...j]) = \left\{ \begin{array}{ll}
-		$0, если i == 0, j == 0$\\
-		$j, если i == 0, j > 0$\\
-		$i, если j == 0, i > 0$\\
-		min(\\
-		D(S_1[1...i],S_2[1...j-1]) + 1,\\
-		D(S_1[1...i-1], S_2[1...j]) + 1, & $j>0, i>0$\\
-		D(S_1[1...i-1], S_2[1...j-1]) + \\
-		\left[ 
-		\begin{array}{c} 
-			$0, если $S_1$[i] == $S_2$[j]$\\
-			$1, иначе$
-		\end{array}
-		\label{eq:ref1}
-		\right.\\
-		)
-	\end{array} \right.
+	\label{for:new}
+	V \cdot W = (v_1 + w_2)(v_2 + w_1) + (v_3 + w_4)(v_4 + w_3) - v_1v_2 - v_3v_4 - w_1w_2 - w_3w_4.
 \end{equation}
 
-Первые три формулы в системе (1.1) являются тривиальными и подразумевают, соответственно: отсутствие действий (совпадение, так как обе строки пусты), вставку j символов в пустую $S_{1}$ для создания строки-копии $S_{2}$ длиной j, удаление всех i символов из строки $S_{1}$ для совпадения с пустой строкой $S_{2}$. 
+Кажется, что второе выражение задает больше работы, чем первое: вместо четырех умножений мы насчитываем их шесть, а вместо трех сложений - десять. Менее очевидно, что выражение в правой части последнего равенства допускает предварительную обработку: его части можно вычислить заранее и запомнить для каждой строки первой матрицы и для каждого столбца второй. На практике это означает, что над предварительно обработанными элементами нам придется выполнять лишь первые два умножения и последующие пять сложений, а также дополнительно два сложения \cite{vino}.
 
-В дальнейшем необходимо выбирать минимум из штрафов, которые будут порождены операциями вставки символа в $S_{1}$ (первая формула в группе min), удаления символа из $S_{1}$, (вторая форумла в группе min), а также совпадения или замены, в зависимости от равенства рассматриваемых на данном этапе символов строк (третья формула в группе min)~\cite{Levenshtein}.
-
-
-\section{Расстояние Дамерау-Левенштейна}
- 
-Расстояние Дамерау-Левенштейна между строками $S_{1}$ и $S_{2}$ рассчитывается по схожей с (\ref{eq:ref1}) рекуррентной формуле. Отличие состоит лишь в добавлении четвертого возможного варианта (\ref{eq:ref2}) в группу min:
-
-\begin{equation}
-	\left[ 
-	\begin{array}{c} 
-		D(S_1[1...i-2],S_2[1...j-2]) + 1, $ если $ $i, j>1, $a_i=b_{j-1}, b_j=a_{i-1}\\
-		\infty $ , иначе$ 
-	\end{array}
-	\right.\\
-	\label{eq:ref2}
-\end{equation}
-
-Этот вариант подразумевает перестановку соседних символов в $S_{1}$, если длины обеих строк больше единицы, и соседние рассматриваемые символы в $S_{1}$ и $S_{2}$ крест-накрест равны. Если же хотя бы одно из условий не выполняется, то данная оперция не учитывается при поиске минимума.
-
-Итоговая же формула для поиска расстояния Дамерау-Левенштейна имеет следующиий вид (\ref{eq:ref3}):
-
-\begin{equation}
-	D(S_1[1...i],S_2[1...j]) = \left\{ \begin{array}{ll}
-		$0, если i == 0, j == 0$\\
-		$j, если i == 0, j > 0$\\
-		$i, если j == 0, i > 0$ 	\label{eq:ref3}\\ 
-		min(\\
-		D(S_1[1...i],S_2[1...j-1]) + 1,\\
-		D(S_1[1...i-1], S_2[1...j]) + 1, & $j>0, i>0$\\
-		D(S_1[1...i-1], S_2[1...j-1]) + \\
-		\left[ 
-		\begin{array}{c} 
-			$0, если $S_1$[i] == $S_2$[j]$\\
-			$1, иначе$
-		\end{array}\\,\\
-		
-		
-		
-			\left[ 
-		\begin{array}{c} 
-			D(S_1[1...i-2],S_2[1...j-2]) + 1, \\
-			$ если $ $i, j>1, $a_i=b_{j-1}, b_j=a_{i-1};\\
-			\infty $ , иначе$ 
-		\end{array}
-		
-		
-		
-		\right.\\
-		)
-	\end{array} \right.
-\end{equation}
-
-
-
-%Замечание: если в дополнение к условиям в формуле \ref{eq:ref2} также верно, что $a_i=b_j$, то прибавлять единицу к $D(S_1[1...i-2],S_2[1...j-2])$ нет необходимости, так как этот будет означать, что оба ссоседних рассматриваемых символа в строках совпадают, однако эти два идущих подряд совпадения будут учтены в третьем уравнении в группе min формулы \ref{eq:ref1}
 
 \section*{Вывод}
-В данном разделе были рассмотрены основополагающие материалы и формулы, которые в дальнейшем потребуются при разработке и реализации алгоритмов поиска расстояний Левенштейна и Дамерау-Левенштейна.
+
+В данном разделе были рассмотрены идеи, лежащие в основе рассматриваемых алгоритмов умножения матриц - стандартного и алгоритма Винограда.
