--- a/lab2/report/50-conclusion.tex
+++ b/lab2/report/50-conclusion.tex
@@ -1,13 +1,13 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы при исследовании алгоритмов нахождения расстояний Левенштейна и Дамерау-Левенштейна были применены и отработаны навыки динамического программирования.
+В результате выполнения лабораторной работы при исследовании алгоритмов умножения матриц были изучены способы оптимизации алгоритмов.
 
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
-	\item изучены расстояния Левенштейна и Дамерау-Левенштейна;
-	\item разработаны и рнализованы алгоритмы поиска этих расстояний;
-	\item проведен сравнительный анализ процессорного времени выполнения реализаций этих алгоритмов, а также затрачиваемой ими пиковой памяти;
-	\item был подготовлен отчет по лабораторной работе.
+	\item изучены алгоритмы умножения матриц;
+\item разработаны и реализованы 3 алгоритма умножения матриц: стандартный, Винограда и Винограда с оптимизациями;
+\item дана теоретическая оценка трудоемкости реализаций алгоритмов;
+\item проведен сравнительный анализ процессорного времени выполнения реализаций алгоритмов.
 \end{enumerate}
 
