--- a/lab2/report/51-biblio.bib
+++ b/lab2/report/51-biblio.bib
@@ -1,21 +1,16 @@
-@ARTICLE{Passenger,
-	author = "В. М. Черненький, Ю. Е. Гапанюк",
-	title = "МЕТОДИКА ИДЕНТИФИКАЦИИ ПАССАЖИРА ПО УСТАНОВОЧНЫМ ДАННЫМ",
-	journal = "Вестник МГТУ им. Н.Э. Баумана. Сер. “Приборостроение”",
-	year = {2012},
-	volume = {39},
-	pages = {31-35}
+@misc{matrix,
+	title="Матрица, ее история и применение [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://urok.1sept.ru/articles/637896} (дата обращения: 20.09.2021)"
 }
 
-@inbook{Levenshtein,
-	author="Левенштейн, В. И.",
-	title="Двоичные коды с исправлением выпадений, вставок и замещений символов",
-	publisher="-- М.: Доклады АН СССР",
-	volume=163,
-	chapter=4,
-	pages="845--848",
-	language="russian",
-	year=1965
+@misc{matrix2,
+	title="Перемножение матриц [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://dic.academic.ru/dic.nsf/} (дата обращения: 20.09.2021)"
+}
+
+@misc{vino,
+	title="Умножение матриц по Винограду [Электронный ресурс]",
+	howpublished="Режим доступа: \url{http://algolib.narod.ru/Math/Matrix.html} (дата обращения: 20.09.2021)"
 }
 
 @inbook{PythonBook,
