--- a/lab2/report/10-analysis.tex
+++ b/lab2/report/10-analysis.tex
@@ -49,6 +49,7 @@ $$c_{ij} = \sum_{k=1}^n a_{ik}b_{kj}, ~(i=1, 2, \ldots l;j=1, 2, \ldots n)~~(1)$
 
 Кажется, что второе выражение задает больше работы, чем первое: вместо четырех умножений мы насчитываем их шесть, а вместо трех сложений - десять. Менее очевидно, что выражение в правой части последнего равенства допускает предварительную обработку: его части можно вычислить заранее и запомнить для каждой строки первой матрицы и для каждого столбца второй. На практике это означает, что над предварительно обработанными элементами нам придется выполнять лишь первые два умножения и последующие пять сложений, а также дополнительно два сложения \cite{vino}.
 
+В конце нужно проверить кратность общей размерности двум. Если она не кратна двум, то нужно добавить к каждому элементу результирующей матрицы произведение последних элементов соответствующих  строки и столбца.
 
 \section*{Вывод}
 
