--- a/lab2/report/20-design.tex
+++ b/lab2/report/20-design.tex
@@ -14,6 +14,7 @@
 	\item Заменить в mulh += на -=, и тогда в третьем цикле  c[i][j] = mulh[i] - mulv[j].
 \end{enumerate}
 
+\clearpage
 
 \begin{figure}[h!]
 	
@@ -25,6 +26,7 @@
 	
 \end{figure}
 
+\clearpage
 
 \begin{figure}[h!]
 	
@@ -36,6 +38,7 @@
 		
 \end{figure}
 
+\clearpage
 
 \begin{figure}[h!]
 	
@@ -46,6 +49,8 @@
 	\label{fig:vopt_block}
 		
 \end{figure}
+
+\clearpage
 
 \section{Оценка трудоемкости}
 
