--- a/lab2/report/40-research.tex
+++ b/lab2/report/40-research.tex
@@ -20,14 +20,17 @@
 
 \section{Время выполнения реализаций алгоритмов}
 
- Все реализации алгоритмов сравнивались на случайно сгенерированных квадратных матрицах размерностями n*n, где n изменялось от 100 до 1000 с шагом 100. Так как замеры времени имеют некоторую погрешность, они для каждой размерности и каждой реализации алгоритма производились 10 раз, а затем вычислялось среднее время работы реализации с матрицами.
+ Все реализации алгоритмов сравнивались на случайно сгенерированных квадратных матрицах размерностями n*n, где n изменялось от 100 до 1000 с шагом 100 (в качестве лучшего случая, четная общеая размерность) и от 101 до 1001 с шагом 100 (в качестве худшего случая). Так как замеры времени имеют некоторую погрешность, они для каждой размерности и каждой реализации алгоритма производились 10 раз, а затем вычислялось среднее время работы реализации с матрицами.
  
-На рисунке \ref{img:time_all} приведены результаты сравнения времени работы всех реализаций. Как видно на графике, теоретические расчеты подтверждаются: все алгоритмы кубически зависят от размерностей матриц, при этом алгоритм Винограда работает дольше всех, а оптимизированный алгоритм Винограда - меньше всех.
+На рисунке \ref{img:time_all} приведены результаты сравнения времени работы всех реализаций на лучшем случае (четная общая размерность), а на рисунке \ref{img:time_all_w} - на худшем (нечетная). Как видно на графиках, теоретические расчеты подтверждаются: все алгоритмы кубически зависят от размерностей матриц, при этом алгоритм Винограда работает дольше всех, а оптимизированный алгоритм Винограда - меньше всех. При нечетной общей размерности алгоритмы Винограда работают дольше по сравнению с тем же алгоритмом при четной общей размерности, однако все равно требуют меньше процессорного времени, чем станадртный алгоритм.
 
-\img{120mm}{time_all}{Сравнение времени работы реализаций алгоритмов}
+\clearpage
+\img{120mm}{time_all}{Сравнение времени работы реализаций алгоритмов (лучший случай)}
+
+\img{120mm}{time_all_w}{Сравнение времени работы реализаций алгоритмов (худший случай)}
 
 
-
+\clearpage
 \section*{Вывод}
 
 Были подтверждены теоретические расчеты: алгоритм Винограда работает дольше стандартного, а оптимизированный алгоритм Винограда - меньше.
