--- a/lab3/report/preamble.inc.tex
+++ b/lab3/report/preamble.inc.tex
@@ -75,7 +75,7 @@
 	\end{figure}
 }
 \newcommand{\boximg}[3] {
-	\begin{figure}[h]
+	\begin{figure}[h!]
 		\center{\fbox{\includegraphics[height=#1]{inc/img/#2}}}
 		\caption{#3}
 		\label{img:#2}
