--- a/lab4/report/20-design.tex
+++ b/lab4/report/20-design.tex
@@ -24,7 +24,7 @@
 	
 	\centering{\includegraphics[scale=0.7]{inc/img/trass_split.png}}
 	
-	\caption{Схема главного потока}
+	\caption{Схема главного потока параллельного алгоритма трассировки лучей}
 	
 	\label{fig:trass_split}
 	
@@ -36,7 +36,7 @@
 	
 	\centering{\includegraphics[scale=0.7]{inc/img/trass_count.png}}
 	
-	\caption{Схема рабочего потока}
+	\caption{Схема рабочего потока параллельного алгоритма трассировки лучей}
 	
 	\label{fig:trass_count}
 	
