--- a/lab4/report/50-conclusion.tex
+++ b/lab4/report/50-conclusion.tex
@@ -1,14 +1,16 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы были получены навыки оценки трудоемкости алгоритмов на примере трех алгоритмов сортировок.
+В результате выполнения лабораторной работы были изучены основы организации параллельных вычислений на базе алгоритма трассировки лучей.
 
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
-	\item изучены три алгоритма сортировок: сортировка вставками, сортировка пузырьком и шейкерная сортировка;
-	\item разработаны и реализованы изученные алгоритмы;
-	\item проведен сравнительный анализ трудоёмкости реализаций алгоритмов на основе теоретических расчетов;
-	\item проведен сравнительный анализ процессорного времени выполнения реализаций алгоритмов на основе экспериментальных данных.
+	\item изучены основы параллельных вычислений;
+	\item изучен алгоритм трассировки лучей;
+	\item разработан алгоритм трассировки лучей;
+	\item реализованы последовательная и параллельная трассировки лучей;
+	\item проведен сравнительный анализ времени работы реализаций.
 \end{enumerate}
+
 
 
