--- a/lab4/report/10-analysis.tex
+++ b/lab4/report/10-analysis.tex
@@ -20,7 +20,7 @@
  
 
 
-\section{Параллельная реализация алгоритма трассировки лучей}
+\section{Параллелизация алгоритма трассировки лучей}
 
 Поскольку алгоритм обратной трассировки лучей обрабатывает каждый пиксель экрана независимо, можно использовать параллельные вычисления для уменьшения времени его работы, разбив экран на некоторые части. Наиболее часто используется горизонтальное или вертикальное разбиение (в данной работе используется второе) \cite{article_paral}.
 
