--- a/lab4/report/20-design.tex
+++ b/lab4/report/20-design.tex
@@ -18,7 +18,7 @@
 
 \section{Схема параллельного алгоритма трассировки лучей}
 
-На рисунке \ref{fig:trass_split} приведена схема главного потока для параллельной реализации алгоритма трассировки лучей, который разбивает экран на вертикальные участки.
+На рисунке \ref{fig:trass_split} приведена схема главного потока для параллельной реализации алгоритма трассировки лучей, который разбивает экран на вертикальные участки, запускает и контролирует рабочие потоки.
 
 \begin{figure}[h!]
 	
