--- a/lab4/report/40-research.tex
+++ b/lab4/report/40-research.tex
@@ -28,7 +28,7 @@
 
 \img{120mm}{time_all}{Сравнение времени работы реализаций в зависимости от количества элементов на сцене}
 
-Последовательная реализация и параллельная реализация с одним потоком, как и ожидалось, работают примерно одинаковое количество времени, хоия при этом вторая-немного дольше в связи с накладными расходами на создание потока. Эти две реализации заняли наибольшее количество времени из всех сравниваемых.
+Последовательная реализация и параллельная реализация с одним потоком, как и ожидалось, работают примерно одинаковое количество времени, хотя при этом вторая-немного дольше в связи с накладными расходами на создание потока. Эти две реализации заняли наибольшее количество времени из всех сравниваемых.
 
 Далее с ростом числа потоков время работы соответствующей параллельной реализации уменьшается, так как независимые вычисления производятся одновременно на разных ядрах. Это происходит вплоть до момента, когда используются 8 потоков, то есть их количество равно количеству логических ядер в компьютере.
 
